tests/errors/lambda_not_used_import.php
<?php

declare(strict_types=1);

$b = '';
$a = static function () use ($b): void {
};
